@@ -171,6 +171,10 @@ val compare: t -> t -> int
     allows the module [Nativeint] to be passed as argument to the functors
     {!Set.Make} and {!Map.Make}. *)
 
+val equal: t -> t -> bool
+(** The equal function for natives ints.
+    @since 4.03.0 *)
+
 (**/**)
 
 (** {6 Deprecated functions} *)
